--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,9 +4,24 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#cabecera{
+    background: #33A;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0 2px 00px 0px rgba(0, 0, 0, 0.5);
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    padding:  0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     font-size: 16px;
     text-align: left;
     border: 1px solid #DDD;
@@ -15,4 +30,8 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#psot{
+
 }
